ros2_ws_lab_1/log/build_2025-04-15_10-46-31/prueba_5/stderr.log
  File "/home/paulo/universidad/5to_semestre/robotica_movil/ros2_ws_lab_1/install/prueba_5/lib/python3.10/site-packages/prueba_5/dead_reckoning_nav.py", line 86
    print('Escuche:' list_msg)
          ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

